# secure-health-records

./: .env.example  .gitignore  Cargo.toml  README.md  dfx.json  package-lock.json  package.json  secure-health-records-backend.did
src/secure-health-records-backend/: Cargo.toml  secure-health-records-backend.did
src/secure-health-records-backend/src/: lib.rs  patient.rs
src/secure-health-records-frontend/: index.html  package.json  tailwind.config.cjs
src/secure-health-records-frontend/public/: .ic-assets.json5
src/secure-health-records-frontend/src/: App.jsx  canisterApi.js  dfinity.js  index.css  main.jsx
src/secure-health-records-frontend/src/assets/: audit.png:Zone.Identifier  audit.pngZone.Identifier  bg.png:Zone.Identifier  bg.pngZone.Identifier  concent.png:Zone.Identifier  concent.pngZone.Identifier  history.png:Zone.Identifier  history.pngZone.Identifier  internetid.png:Zone.Identifier  internetid.pngZone.Identifier  lock.png:Zone.Identifier  lock.pngZone.Identifier  vault.png:Zone.Identifier  vault.pngZone.Identifier
src/secure-health-records-frontend/src/components/: GetStartedButton.jsx
src/secure-health-records-frontend/src/components/LandingPage/: Feature.jsx  Footer.jsx  GetStartedButton.jsx  Hero.jsx  InsightSection.css  InsightSection.jsx  LandingPage.css  LandingPage.jsx  Login.css  Login.jsx  Nav.jsx  PaperCard.jsx  Platform.jsx  ScatteredDocs.jsx  Security.jsx  StickyCards.css  StickyCards.jsx  Testimonials.css  Testimonials.jsx  UrgencySection.css  UrgencySection.jsx  feature.css
(+54 files in other folders)
