[package]
name = "secure-health-records-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.17"
ic-cdk-macros = "0.8"
ic-cdk-timers = "0.11"
serde = { version = "1.0", features = ["derive"] }
candid = "0.10"
